--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="ui container fluid" id="app" [class.login-container]="!isAuthenticated">
-  <div class="ui vertical left very thin sidebar menu visible" *ngIf="isAuthenticated">
+  <div class="ui vertical left very thin sidebar menu visible nav" *ngIf="isAuthenticated">
     <a routerLink="/retail" routerLinkActive="active" class="item" *ngIf="authorise('retail')" title="Bán lẻ"><img src="assets/shopping-cart.svg" /></a>
     <a routerLink="/product" routerLinkActive="active" class="item" *ngIf="authorise('product')" title="Quản lý sản phẩm"><img src="assets/product.svg" /></a>
     <a routerLink="/customer" routerLinkActive="active" class="item" *ngIf="authorise('customer')" title="Quản lý khách hàng"><img src="assets/customer.svg" /></a>
