--- a/src/app/product/components/product/product.component.html
+++ b/src/app/product/components/product/product.component.html
@@ -16,14 +16,14 @@
       </mat-form-field>
       <div class="error" *ngIf="errors.has('name')">{{errors.get('name')}}</div>
     </div>
-    <div class="eight wide column">
+    <div class="ten wide column">
       <dropdown [(model)]="product.categoryId"
                 [options]="categories"
                 [label]="'Loại'"
                 [valueMember]="'id'"
                 [displayMember]="'name'"></dropdown>
     </div>
-    <div class="eight wide column">
+    <div class="six wide column">
       <dropdown [options]="uoms"
                 [label]="'ĐVT'"
                 [(model)]="product.uomId"
