--- a/src/app/retail/components/overview/overview.component.html
+++ b/src/app/retail/components/overview/overview.component.html
@@ -1,20 +1,5 @@
 <div class="overview">
   <div class="section">
-    <div class="title">Hóa đơn</div>
-    <div class="flex">
-      <label>{{invoice.no}}</label>
-      <label>{{invoice.date | date:'dd/MM/yyyy'}}</label>
-    </div>
-    <div class="flex">
-      <label>Tổng hóa đơn:</label>
-      <label>{{invoice.total | number }}</label>
-    </div>
-    <div class="flex" *ngIf="invoice.payments.length > 0">
-      <label>Tiền mặt:</label>
-      <label>{{invoice.payments[0].amount | number}}</label>
-    </div>
-  </div>
-  <div class="section">
     <div class="title">Khách hàng</div>
     <div class="flex">
       <label>{{invoice.customer.name}}</label>
@@ -25,5 +10,17 @@
       <label>{{invoice.customer.email}}</label>
     </div>
     <div *ngIf="!!invoice.customer.address">{{invoice.customer.address}}</div>
-  </div>   
+  </div>
+  <div class="section">
+    <div class="title">Thanh toán</div>
+    <div class="flex">
+      <label>Tổng hóa đơn:</label>
+      <label>{{invoice.total | number }}</label>
+    </div>
+    <div class="flex" *ngIf="invoice.payments.length > 0">
+      <label>Tiền mặt:</label>
+      <label>{{invoice.payments[0].amount | number}}</label>
+    </div>
+  </div>
+
 </div>
