--- a/src/app/report/components/income/income-by-customer.component.html
+++ b/src/app/report/components/income/income-by-customer.component.html
@@ -3,7 +3,7 @@
       [showFooter]="true"
       [isHeaderSticky]="true"
       [isFooterSticky]="true"
-      [defaultSearch]="{orderBy: 'income', isDesc: true}"
+      [defaultSort]="{orderBy: 'income', isDesc: true}"
       (sortChange)="onSortChange($event)"
       [height]="height"
       [virtualScroll]="true">
