Install Node as a service

--- a/src/app/retail/components/print/print.component.html
+++ b/src/app/retail/components/print/print.component.html
@@ -7,7 +7,7 @@
   <div style="padding-top: 8px; border-top: 2px solid grey;" class="section overview">
     <div style="margin-bottom: 4px; text-align: center; font-weight: 600" class="center">HÓA ĐƠN THANH TOÁN</div>
     <div style="margin-bottom: 4px;display: flex;justify-content: space-between" class="flex">
-      <span>Ngày: {{invoice.createdAt | date:'dd/MM/yyyy HH:mm'}}</span>
+      <span>Ngày: {{createdAt | date:'dd/MM/yyyy HH:mm'}}</span>
       <span>HĐ: {{invoice.no}}</span>
     </div>
     <div style="margin-bottom: 4px">NV: {{staffName}}</div>
