More handling as per client requests

--- a/src/app/retail/components/payment/payment.component.html
+++ b/src/app/retail/components/payment/payment.component.html
@@ -29,7 +29,7 @@
     </div>
   </div>  
   <div class="actions">
-    <button mat-flat-button (click)="doCommit()">Lưu</button>
-    <button mat-flat-button color="primary" (click)="doCommit(true)">Lưu & In (F9)</button>
+    <button mat-flat-button (click)="doCommit()">Thanh toán</button>
+    <button mat-flat-button color="primary" (click)="doCommit(true)">Thanh toán & In (F9)</button>
   </div>
 </div>
