Misc fixes as per customer requests

--- a/src/app/report/components/income/income.component.scss
+++ b/src/app/report/components/income/income.component.scss
@@ -9,7 +9,7 @@
     }
   }
 
-  .mat-row.new, .mat-row.partial {
+  .mat-row.new {
     td:first-child {
       border-left: 4px solid #f2da3e;
     }
