--- a/src/app/retail/components/print/print.component.html
+++ b/src/app/retail/components/print/print.component.html
@@ -35,8 +35,8 @@
   </div>
   <div style="padding-top: 8px;border-top: 2px solid grey;" class="section total">
     <div style="margin-bottom: 8px;display: flex;justify-content: space-between" class="flex">
-      <span>TỔNG HÓA ĐƠN</span>
-      <span>{{invoice.total | number}}</span>
+      <span style="font-weight: 600">TỔNG HÓA ĐƠN</span>
+      <span style="font-weight: 600">{{invoice.total | number}}</span>
     </div>    
   </div>
   <div style="padding-top: 8px; border-top: 2px solid grey;text-align:center" class="section bye center">
