--- a/src/app/bulk-data/components/bulk-delete/bulk-delete-product.component.html
+++ b/src/app/bulk-data/components/bulk-delete/bulk-delete-product.component.html
@@ -2,5 +2,7 @@
       [dataSource]="products"      
       [height]="height"
       [virtualScroll]="true"
-      [selectable]="true">
+      [selectable]="true"
+      [showFooter]="true"
+      [isFooterSticky]="true">
 </grid>
