--- a/src/site.scss
+++ b/src/site.scss
@@ -130,3 +130,19 @@
   min-height: 48px !important;
   border-top: 1px solid lightgrey;
 }
+
+.screen-locker {
+  background-color: black;
+  opacity: 0.75;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  z-index: 1000;
+
+  .msg {
+    color: white;
+    font-size: 24px;
+    margin: auto;
+  }
+}
