--- a/src/app/retail/components/retail/retail.component.html
+++ b/src/app/retail/components/retail/retail.component.html
@@ -19,17 +19,17 @@
                    [minChars]="1">
           <ng-template #itemTemplate let-item="item">
             <div class="search-item">
-              <div class="flex">
-                <label>{{item.no}}</label>                
-                <label>{{item.date | date:'dd/MM/yyyy'}}</label>
+              <div class="flex row">
+                <div>{{item.no}}</div>                
+                <div>{{item.date | date:'dd/MM/yyyy'}}</div>
+                <div style="font-weight: 600; color: #cc0263;">{{item.total | number}}</div>
               </div>
-              <div class="flex">
-                <div>
-                  {{item.customer.name}}<span *ngIf="!!item.customer.phone"> - {{item.customer.phone}}</span>
-                </div>                
-                <label>{{item.customer.no}}</label>
+              <div class="flex row">
+                <div>{{item.customer.name}}</div>
+                <div>{{item.customer.phone}}</div>
+                <div>{{item.customer.no}}</div>
               </div>
-              <div *ngIf="!!item.customer.address">{{item.customer.address}}</div>
+              <div class="row" *ngIf="!!item.customer.address" style="color: grey; font-style:italic">{{item.customer.address}}</div>
             </div>            
           </ng-template>
         </typeahead>
